--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20250829-2"></script>
 </body>
 </html>
