Add article links and archive page for website navigation

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             
             <!-- Navigation Links -->
             <div class="flex justify-center space-x-4 mt-4 text-sm">
-                <a href="/today" class="text-blue-600 hover:text-blue-800">Today's Puzzle</a>
+                <a href="/api/today" class="text-blue-600 hover:text-blue-800">Today's Puzzle</a>
                 <a href="/help" class="text-blue-600 hover:text-blue-800">How to Play</a>
-                <a href="/archive" class="text-blue-600 hover:text-blue-800">📚 Solutions Archive</a>
+                <a href="/articles" class="text-blue-600 hover:text-blue-800">📚 Solutions Archive</a>
                 <a href="#about" class="text-blue-600 hover:text-blue-800">About</a>
             </div>
         </header>
