修复首页导航链接 - 将Today's Puzzle链接改为Home链接

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             
             <!-- Navigation Links -->
             <div class="flex justify-center space-x-4 mt-4 text-sm">
-                <a href="/api/today" class="text-blue-600 hover:text-blue-800">Today's Puzzle</a>
+                <a href="/" class="text-blue-600 hover:text-blue-800">🏠 Home</a>
                 <a href="/help" class="text-blue-600 hover:text-blue-800">How to Play</a>
                 <a href="/articles" class="text-blue-600 hover:text-blue-800">📚 Solutions Archive</a>
                 <a href="#about" class="text-blue-600 hover:text-blue-800">About</a>
