修复导航链接：移除多余的Today's Puzzle和Home链接

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
             
             <!-- Navigation Links -->
             <div class="flex justify-center space-x-4 mt-4 text-sm">
-                <a href="/" class="text-blue-600 hover:text-blue-800">🏠 Home</a>
-                <a href="/help" class="text-blue-600 hover:text-blue-800">How to Play</a>
+                <a href="/help" class="text-blue-600 hover:text-blue-800">❓ How to Play</a>
                 <a href="/articles" class="text-blue-600 hover:text-blue-800">📚 Solutions Archive</a>
-                <a href="#about" class="text-blue-600 hover:text-blue-800">About</a>
+                <a href="#about" class="text-blue-600 hover:text-blue-800">ℹ️ About</a>
             </div>
         </header>
 
