Replace timezone-specific language with 'Latest' for better UX

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <header class="text-center mb-8">
             <h1 class="text-3xl font-bold text-gray-800 mb-2">NYT Connections Game Helper</h1>
-            <p class="text-gray-600">Today's New York Times Connections Puzzle - Interactive AI Hint System</p>
+            <p class="text-gray-600">Latest New York Times Connections Puzzle - Interactive AI Hint System</p>
             
             <!-- Puzzle Date Display -->
             <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 mt-4 mb-2 inline-block">
@@ -73,7 +73,7 @@
                     <span class="text-lg font-semibold text-blue-800" id="puzzleDate">Loading puzzle date...</span>
                     <span class="text-blue-600" id="puzzleStatus">🔄</span>
                 </div>
-                <div class="text-sm text-blue-600 mt-1" id="puzzleInfo">Fetching today's puzzle...</div>
+                <div class="text-sm text-blue-600 mt-1" id="puzzleInfo">Fetching latest puzzle...</div>
             </div>
             
             <p class="text-sm text-gray-500 mt-2">Get smart hints and play the daily word grouping challenge with AI assistance</p>
@@ -160,12 +160,12 @@
             </div>
         </div>
 
-        <!-- Today's Article Link -->
+        <!-- Latest Article Link -->
         <div class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-md p-6 mt-6 text-white text-center">
             <h3 class="text-xl font-bold mb-2">📖 Want the Complete Solution?</h3>
-            <p class="mb-4">Get detailed explanations, solving strategies, and all answers in our comprehensive daily guide!</p>
+            <p class="mb-4">Get detailed explanations, solving strategies, and all answers in our comprehensive puzzle guide!</p>
             <a href="#" id="todayArticleLink" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
-                📚 Read Today's Complete Guide
+                📚 Read Complete Solution Guide
             </a>
         </div>
 
