🎨 Optimize homepage navigation and links
✅ User experience improvements:
- Remove duplicate 'Solutions Archive' from top navigation
- Keep only the Previous Puzzles section for better UX
- Update 'Read Complete Solution Guide' to link to static articles
- Make all article links point to static pages for consistency

🚀 Performance benefits:
- All links now use fast-loading static pages
- Consistent user experience across all article access points
- Simplified navigation reduces user confusion

📊 Changes:
- index.html: Remove duplicate navigation, update guide link
- script.js: Update JavaScript to use static article URLs
- Better user flow: game  static article (faster loading)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
             <!-- Navigation Links -->
             <div class="flex justify-center space-x-4 mt-4 text-sm">
                 <a href="/help" class="text-blue-600 hover:text-blue-800">❓ How to Play</a>
-                <a href="/articles" class="text-blue-600 hover:text-blue-800">📚 Solutions Archive</a>
                 <a href="#about" class="text-blue-600 hover:text-blue-800">ℹ️ About</a>
             </div>
         </header>
@@ -186,7 +185,7 @@
         <div class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-md p-6 mt-6 text-white text-center">
             <h3 class="text-xl font-bold mb-2">📖 Want the Complete Solution?</h3>
             <p class="mb-4">Get detailed explanations, solving strategies, and all answers in our comprehensive puzzle guide!</p>
-            <a href="#" id="todayArticleLink" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
+            <a href="/articles/2025-09-19.html" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
                 📚 Read Complete Solution Guide
             </a>
         </div>
