Optimize page layout for better user flow
✅ Layout improvements:
- Move Previous Puzzles section after Solution Guide
- Create natural user flow: Game  Solution  History
- Encourage users to complete puzzle before browsing archives
- Improve user engagement and retention

🎯 User experience benefits:
- Higher game participation rate
- Better content discovery path
- Increased solution guide usage
- More natural browsing flow

--- a/index.html
+++ b/index.html
@@ -85,27 +85,7 @@
             </div>
         </header>
 
-        <!-- Previous Puzzles Quick Access -->
-        <div class="bg-gradient-to-r from-blue-50 to-purple-50 rounded-lg shadow-md p-6 mb-6">
-            <div class="text-center">
-                <h2 class="text-xl font-bold text-gray-800 mb-2">📚 Previous Puzzles & Solutions</h2>
-                <p class="text-gray-600 mb-4">Access complete solutions for past NYT Connections puzzles with hints and explanations</p>
-                <div class="flex justify-center gap-3 flex-wrap">
-                    <a href="/articles/" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors inline-flex items-center gap-2">
-                        📋 View All Solutions
-                    </a>
-                    <a href="/articles/2025-09-19.html" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors inline-flex items-center gap-2">
-                        📄 Latest Solution
-                    </a>
-                    <a href="/articles/2025-09-18.html" class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors inline-flex items-center gap-2">
-                        📅 Yesterday's
-                    </a>
-                </div>
-                <div class="mt-3 text-sm text-gray-500">
-                    🔄 Updated daily with new solutions • 📱 Mobile-friendly • ⚡ Fast loading
-                </div>
-            </div>
-        </div>
+
 
         <!-- Game Status Bar -->
         <div class="bg-white rounded-lg shadow-md p-4 mb-6">
@@ -188,6 +168,28 @@
             <a href="/articles/2025-09-19.html" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
                 📚 Read Complete Solution Guide
             </a>
+        </div>
+
+        <!-- Previous Puzzles Quick Access -->
+        <div class="bg-gradient-to-r from-blue-50 to-purple-50 rounded-lg shadow-md p-6 mt-6">
+            <div class="text-center">
+                <h2 class="text-xl font-bold text-gray-800 mb-2">📚 Previous Puzzles & Solutions</h2>
+                <p class="text-gray-600 mb-4">Access complete solutions for past NYT Connections puzzles with hints and explanations</p>
+                <div class="flex justify-center gap-3 flex-wrap">
+                    <a href="/articles/" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors inline-flex items-center gap-2">
+                        📋 View All Solutions
+                    </a>
+                    <a href="/articles/2025-09-19.html" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors inline-flex items-center gap-2">
+                        📄 Latest Solution
+                    </a>
+                    <a href="/articles/2025-09-18.html" class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors inline-flex items-center gap-2">
+                        📅 Yesterday's
+                    </a>
+                </div>
+                <div class="mt-3 text-sm text-gray-500">
+                    🔄 Updated daily with new solutions • 📱 Mobile-friendly • ⚡ Fast loading
+                </div>
+            </div>
         </div>
 
         <!-- SEO Content Section -->
