--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-md p-6 mt-6 text-white text-center">
             <h3 class="text-xl font-bold mb-2">📖 Want the Complete Solution?</h3>
             <p class="mb-4">Get detailed explanations, solving strategies, and all answers in our comprehensive puzzle guide!</p>
-            <a href="/articles/2025-09-23.html" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
+            <a href="/articles/2025-09-24.html" id="todayArticleLink" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors inline-block">
                 📚 Read Complete Solution Guide
             </a>
         </div>
@@ -179,7 +179,7 @@
                     <a href="/articles/" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors inline-flex items-center gap-2">
                         📋 View All Solutions
                     </a>
-                    <a href="/articles/2025-09-23.html" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors inline-flex items-center gap-2">
+                    <a href="/articles/2025-09-24.html" id="latestSolutionLink" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors inline-flex items-center gap-2">
                         📄 Latest Solution
                     </a>
                     <a href="/articles/2025-09-22.html" class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors inline-flex items-center gap-2">
