Hide Yesterday's button to improve user experience

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <a href="/articles/2025-09-24.html" id="latestSolutionLink" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors inline-flex items-center gap-2">
                         📄 Latest Solution
                     </a>
-                    <a href="/articles/2025-09-22.html" class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors inline-flex items-center gap-2">
+                    <a href="/articles/2025-09-22.html" class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors inline-flex items-center gap-2 hidden">
                         📅 Yesterday's
                     </a>
                 </div>
